--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,20 +1,50 @@
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap');
+
+:root{
+  --font-primary: 'Open Sans', sans-serif;
+  --font-secondary: 'Libre Baskerville', serif;
+  --color-default: #15110D;
+  --color-light:#F5F5F5;
+  --color-mint: #87999C;
+  --color-primary-light: #F0970B;
+  --color-primary: #EA6C2E;
+  --color-primary-dark: #923E22;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: var(--font-primary);
   line-height: 1.6;
-  font-size: 18px;
+  font-size: 14px;
   overflow-x: hidden;
+  scroll-behavior: smooth;
+}
+
+/* Types */
+h1, h2{
+  font-family: var(--font-secondary);
+  font-weight: bold;
+}
+
+h1 i, h2 i{
+  font-family: var(--font-primary);
+  font-style: italic;
+}
+
+h3, h4, h5{
+  font-family: var(--font-primary);
+  font-weight: bold;
 }
 
 * {
   box-sizing: border-box;
+  position: relative;
 }
 
 a {
-  color: #0070f3;
+  color: var(--color-mint);
   text-decoration: none;
 }
 
