--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -25,7 +25,7 @@ body,
   font-family: var(--font-primary);
   line-height: 1.6;
   font-size: 14px;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
   scroll-behavior: smooth;
   height: 100%;
 }
